Dropdown added for navbar menu

--- a/index.html
+++ b/index.html
@@ -35,35 +35,115 @@
                         <span>Özellikler</span>
                         <i class="fa-solid fa-chevron-down"></i>
                         <div class="dropdown-content">
-                            <ul>
-                                <li>test</li>
-                                <li>test</li>
-                                <li>test</li>
-                                <li>test</li>
+                            <ul class="feature-lists">
+                                <li>
+                                    <a href="https://wetransfer.com/tr-TR/explore/file-sharing?sp=false">Dosyalarınızı
+                                        Paylaşın
+                                    </a>
+                                </li>
+                                <li><a href="https://wetransfer.com/explore/data-security">Dosyalarınızı Koruyun</a>
+                                </li>
+                                <li><a href="https://wetransfer.com/explore/branding">Sayfanızı Özelleştirin</a></li>
+                                <li><a href="https://wetransfer.com/explore/portals-reviews">Geri bildirim verin ve
+                                        alın</a></li>
+                                <li><a href="https://wetransfer.com/explore/teams">Ekibinizle işbirliği yapın</a></li>
+                                <li><a href="https://wetransfer.com/explore/sell-files-get-paid">Çalışmalarınız için
+                                        ödeme alın</a></li>
+                                <li><a href="https://wetransfer.com/explore/distribution?sp=false">İçeriğinizi
+                                        Dağıtın</a></li>
+                                <li><a href="https://wetransfer.com/explore/collect">İlham panoları oluştur</a></li>
+                                <li><a href="https://wetransfer.com/explore/collect">Avantajlardan faydalanın</a></li>
                             </ul>
                         </div>
                     </div>
-                    
+
                     <div class="dropdown">
                         <span>Fiyatlandırma</span>
+
+
+                    </div>
+                    <div class="dropdown">
+                        <span>Örnekleri Kullanın</span>
                         <i class="fa-solid fa-chevron-down"></i>
                         <div class="dropdown-content">
-                            <ul>
-                                <li>test</li>
-                                <li>test</li>
-                                <li>test</li>
-                                <li>test</li>
+                            <ul class="feature-lists">
+                                <li>
+                                    <a href="https://wetransfer.com/explore/photographers?sp=false">Fotoğrafçılar için
+                                    </a>
+                                </li>
+                                <li><a href="https://wetransfer.com/explore/videographers?sp=false">Video grafikler
+                                        için</a>
+                                </li>
+                                <li><a href="https://wetransfer.com/explore/designers-illustrators?sp=false">Tasarımcılar
+                                        ve illüstratörler için</a></li>
+                                <li><a href="https://wetransfer.com/explore/for-students?sp=false">Öğrenciler için</a>
+                                </li>
+
                             </ul>
                         </div>
                     </div>
-                    <!-- <div>
-                        <p>Fiyatlandırma</p>
-                    </div> -->
-                    <div>
-                        <p>Örnekleri Kullanın</p>
-                    </div>
-                    <div>
-                        <p>Kaynaklar</p>
+                    <div class="dropdown">
+                        <span>Kaynaklar</span>
+                        <i class="fa-solid fa-chevron-down"></i>
+                        <div class="dropdown-content">
+
+                            <div class="source-lists">
+                                <ul>
+                                    <li>
+                                        <h5>HAKKIMIZDA</h5>
+                                    </li>
+                                    <li>
+                                        <a href="https://wetransfer.com/explore/photographers?sp=false">Şirket
+                                        </a>
+                                    </li>
+                                    <li><a href="https://wetransfer.com/explore/videographers?sp=false">Kariyer</a>
+                                    </li>
+                                    <li><a
+                                            href="https://wetransfer.com/explore/designers-illustrators?sp=false">Kültür</a>
+                                    </li>
+                                    <li><a href="https://wetransfer.com/explore/for-students?sp=false">Liderlik</a></li>
+                                    <li><a href="https://wetransfer.com/explore/for-students?sp=false">Şirket Toplumsal
+                                            sorumluluğu</a></li>
+                                    <li><a href="https://wetransfer.com/explore/for-students?sp=false">Ödüller</a></li>
+                                    <li><a href="https://wetransfer.com/explore/for-students?sp=false">Haber Odası</a>
+                                    </li>
+                                </ul>
+                                <ul>
+                                    <li>
+                                        <h5>ADVERTISING</h5>
+                                    </li>
+                                    <li>
+                                        <a href="https://wetransfer.com/explore/photographers?sp=false">Bize Reklam
+                                            Verin
+                                        </a>
+                                    </li>
+                                    <li><a href="https://wetransfer.com/explore/videographers?sp=false">Sorumlu
+                                            Uygulamalar</a>
+                                    </li>
+                                    <li><a href="https://wetransfer.com/explore/designers-illustrators?sp=false">Reklam
+                                            Poltikaları</a>
+                                    </li>
+
+                                </ul>
+                                <ul>
+                                    <li>
+                                        <h5>DAHA FAZLASI</h5>
+                                    </li>
+                                    <li>
+                                        <a href="https://wetransfer.com/explore/photographers?sp=false">We present
+                                        </a>
+                                    </li>
+                                    <li><a href="https://wetransfer.com/explore/videographers?sp=false">Blog</a>
+                                    </li>
+                                    <li><a
+                                            href="https://wetransfer.com/explore/designers-illustrators?sp=false">Yardım</a>
+                                    </li>
+
+
+                                </ul>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
 
