editing mobile design

--- a/index.html
+++ b/index.html
@@ -167,9 +167,76 @@
     <!-- Nav Mobile -->
     <nav id="nav-mobile">
 
-        <div>
+        <div class="dropdown">
             <i class="fa-solid fa-bars"></i>
+            <div class="dropdown-content">
+                <div class="mobile-nav-menu">
+                    <div class="mobile-nav-menu-area" data-index="1" onclick="toggleMenu(1)">
+                        <div class=" mobile-nav-menu-items" >
+                            <p>Özellikler</p>
+                            <i class="fa-solid fa-chevron-down icon-2"></i>
+                        </div>
+
+
+                        <ul class="mobile-nav-menu-lists">
+                            <li>
+                                <a href="https://wetransfer.com/tr-TR/explore/file-sharing?sp=false">Dosyalarınızı
+                                    Paylaşın
+                                </a>
+                            </li>
+                            <li><a href="https://wetransfer.com/explore/data-security">Dosyalarınızı Koruyun</a>
+                            </li>
+                            <li><a href="https://wetransfer.com/explore/branding">Sayfanızı Özelleştirin</a></li>
+                            <li><a href="https://wetransfer.com/explore/portals-reviews">Geri bildirim verin ve
+                                    alın</a></li>
+                            <li><a href="https://wetransfer.com/explore/teams">Ekibinizle işbirliği yapın</a></li>
+                            <li><a href="https://wetransfer.com/explore/sell-files-get-paid">Çalışmalarınız için
+                                    ödeme alın</a></li>
+                            <li><a href="https://wetransfer.com/explore/distribution?sp=false">İçeriğinizi
+                                    Dağıtın</a></li>
+                            <li><a href="https://wetransfer.com/explore/collect">İlham panoları oluştur</a></li>
+                            <li><a href="https://wetransfer.com/explore/collect">Avantajlardan faydalanın</a></li>
+                        </ul>
+
+                    </div>
+                    <div class="mobile-nav-menu-area" data-index="2" onclick="toggleMenu(2)">
+                        <div class=" mobile-nav-menu-items" >
+                            <p>Özellikler</p>
+                            <i class="fa-solid fa-chevron-down icon-2"></i>
+                        </div>
+                    
+                    
+                        <ul class="mobile-nav-menu-lists">
+                            <li>
+                                <a href="https://wetransfer.com/tr-TR/explore/file-sharing?sp=false">Dosyalarınızı
+                                    Paylaşın
+                                </a>
+                            </li>
+                            <li><a href="https://wetransfer.com/explore/data-security">Dosyalarınızı Koruyun</a>
+                            </li>
+                            <li><a href="https://wetransfer.com/explore/branding">Sayfanızı Özelleştirin</a></li>
+                            <li><a href="https://wetransfer.com/explore/portals-reviews">Geri bildirim verin ve
+                                    alın</a></li>
+                            <li><a href="https://wetransfer.com/explore/teams">Ekibinizle işbirliği yapın</a></li>
+                            <li><a href="https://wetransfer.com/explore/sell-files-get-paid">Çalışmalarınız için
+                                    ödeme alın</a></li>
+                            <li><a href="https://wetransfer.com/explore/distribution?sp=false">İçeriğinizi
+                                    Dağıtın</a></li>
+                            <li><a href="https://wetransfer.com/explore/collect">İlham panoları oluştur</a></li>
+                            <li><a href="https://wetransfer.com/explore/collect">Avantajlardan faydalanın</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+
+
+
+
+            </div>
+
         </div>
+
+
         <div>
             <!-- WeTransfer Icons -->
 
