editing mobile design

--- a/index.html
+++ b/index.html
@@ -171,41 +171,26 @@
             <i class="fa-solid fa-bars"></i>
             <div class="dropdown-content">
                 <div class="mobile-nav-menu">
-                    <div class="mobile-nav-menu-area" data-index="1" onclick="toggleMenu(1)">
-                        <div class=" mobile-nav-menu-items" >
-                            <p>Özellikler</p>
-                            <i class="fa-solid fa-chevron-down icon-2"></i>
+                    <div class="mobile-menu-content">
+                        <div class="mobile-nav-menu-items">
+                            <p>Dosya Gönder</p>
                         </div>
 
 
-                        <ul class="mobile-nav-menu-lists">
-                            <li>
-                                <a href="https://wetransfer.com/tr-TR/explore/file-sharing?sp=false">Dosyalarınızı
-                                    Paylaşın
-                                </a>
-                            </li>
-                            <li><a href="https://wetransfer.com/explore/data-security">Dosyalarınızı Koruyun</a>
-                            </li>
-                            <li><a href="https://wetransfer.com/explore/branding">Sayfanızı Özelleştirin</a></li>
-                            <li><a href="https://wetransfer.com/explore/portals-reviews">Geri bildirim verin ve
-                                    alın</a></li>
-                            <li><a href="https://wetransfer.com/explore/teams">Ekibinizle işbirliği yapın</a></li>
-                            <li><a href="https://wetransfer.com/explore/sell-files-get-paid">Çalışmalarınız için
-                                    ödeme alın</a></li>
-                            <li><a href="https://wetransfer.com/explore/distribution?sp=false">İçeriğinizi
-                                    Dağıtın</a></li>
-                            <li><a href="https://wetransfer.com/explore/collect">İlham panoları oluştur</a></li>
-                            <li><a href="https://wetransfer.com/explore/collect">Avantajlardan faydalanın</a></li>
-                        </ul>
 
                     </div>
-                    <div class="mobile-nav-menu-area" data-index="2" onclick="toggleMenu(2)">
-                        <div class=" mobile-nav-menu-items" >
+                    <div class="mobile-menu-content">
+                        <div class=" mobile-nav-menu-items">
+                            <p>AnaSayfa</p>
+                        </div>
+                    </div>
+                    <div class="mobile-menu-content mobile-nav-menu-area" data-index="1" onclick="toggleMenu(1)">
+                        <div class=" mobile-nav-menu-items">
                             <p>Özellikler</p>
                             <i class="fa-solid fa-chevron-down icon-2"></i>
                         </div>
-                    
-                    
+
+
                         <ul class="mobile-nav-menu-lists">
                             <li>
                                 <a href="https://wetransfer.com/tr-TR/explore/file-sharing?sp=false">Dosyalarınızı
@@ -225,6 +210,102 @@
                             <li><a href="https://wetransfer.com/explore/collect">İlham panoları oluştur</a></li>
                             <li><a href="https://wetransfer.com/explore/collect">Avantajlardan faydalanın</a></li>
                         </ul>
+                    </div>
+                    <div class="mobile-menu-content">
+                        <div class=" mobile-nav-menu-items">
+                            <p>Fiyatlandırma</p>
+                        </div>
+                    </div>
+                    <div class="mobile-menu-content mobile-nav-menu-area" data-index="2" onclick="toggleMenu(2)">
+                        <div class=" mobile-nav-menu-items">
+                            <p>Örnekleri Kullanın</p>
+                            <i class="fa-solid fa-chevron-down icon-2"></i>
+                        </div>
+
+
+                        <ul class="mobile-nav-menu-lists">
+                            <li>
+                                <a href="https://wetransfer.com/explore/photographers?sp=false">Fotoğrafçılar için
+                                </a>
+                            </li>
+                            <li><a href="https://wetransfer.com/explore/videographers?sp=false">Video grafikler
+                                    için</a>
+                            </li>
+                            <li><a href="https://wetransfer.com/explore/designers-illustrators?sp=false">Tasarımcılar
+                                    ve illüstratörler için</a></li>
+                            <li><a href="https://wetransfer.com/explore/for-students?sp=false">Öğrenciler için</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                    <div class="mobile-menu-content mobile-nav-menu-area" data-index="3" onclick="toggleMenu(3)">
+                        <div class=" mobile-nav-menu-items">
+                            <p>Kaynaklar</p>
+                            <i class="fa-solid fa-chevron-down icon-2"></i>
+                        </div>
+
+
+                        <ul class="mobile-nav-menu-lists">
+
+                            <li>
+                                <h5>HAKKIMIZDA</h5>
+                            </li>
+                            <li>
+                                <a href="https://wetransfer.com/explore">Şirket
+                                </a>
+                            </li>
+                            <li><a href="https://wetransfer.com/explore/videographers?sp=false">Kariyer</a>
+                            </li>
+                            <li><a href="https://wetransfer.com/explore/designers-illustrators?sp=false">Kültür</a>
+                            </li>
+                            <li><a href="https://wetransfer.com/explore/corporate/leadership">Liderlik</a></li>
+                            <li><a href="https://wetransfer.com/explore/csr">Şirket Toplumsal
+                                    sorumluluğu</a></li>
+                            <li><a href="https://wetransfer.com/explore/corporate/awards">Ödüller</a></li>
+                            <li><a href="https://wetransfer.com/blog/newsroom">Haber Odası</a>
+                            </li>
+
+
+                            <li>
+                                <h5>ADVERTISING</h5>
+                            </li>
+                            <li>
+                                <a href="https://wetransfer.com/explore/advertising">Bize Reklam
+                                    Verin
+                                </a>
+                            </li>
+                            <li><a href="https://wetransfer.com/explore/advertising/responsible">Sorumlu
+                                    Uygulamalar</a>
+                            </li>
+                            <li><a href="https://wetransfer.com/explore/advertising/policies">Reklam
+                                    Poltikaları</a>
+                            </li>
+
+
+
+                            <li>
+                                <h5>DAHA FAZLASI</h5>
+                            </li>
+                            <li>
+                                <a
+                                    href="https://wepresent.wetransfer.com/https://wetransfer.com/explore/photographers?sp=false">We
+                                    present
+                                </a>
+                            </li>
+                            <li><a
+                                    href="https:https://wetransfer.com/blog/wetransfer.com/explore/videographers?sp=false">Blog</a>
+                            </li>
+                            <li><a href="https://help.wetransfer.com/hc/en-us">Yardım</a>
+                            </li>
+
+
+
+                        </ul>
+                    </div>
+                    <div class="mobile-menu-content">
+                        <div class=" mobile-nav-menu-items">
+                            <p>Giriş Yap</p>
+                        </div>
                     </div>
                 </div>
 
