edit mobile navbar icons

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <div class="source-lists">
                                 <ul>
                                     <li>
-                                        <h5>HAKKIMIZDA</h5>
+                                        <h5 class="text-blue">HAKKIMIZDA</h5>
                                     </li>
                                     <li>
                                         <a href="https://wetransfer.com/explore">Şirket
@@ -113,7 +113,7 @@
                                 </ul>
                                 <ul>
                                     <li>
-                                        <h5>ADVERTISING</h5>
+                                        <h5 class="text-blue">ADVERTISING</h5>
                                     </li>
                                     <li>
                                         <a href="https://wetransfer.com/explore/advertising">Bize Reklam
@@ -130,7 +130,7 @@
                                 </ul>
                                 <ul>
                                     <li>
-                                        <h5>DAHA FAZLASI</h5>
+                                        <h5 class="text-blue">DAHA FAZLASI</h5>
                                     </li>
                                     <li>
                                         <a
@@ -167,13 +167,13 @@
     <!-- Nav Mobile -->
     <nav id="nav-mobile">
 
-        <div class="dropdown">
-            <i class="fa-solid fa-bars"></i>
-            <div class="dropdown-content">
+        <div class="dropdown-mobile" onclick="dropdownMenu()">
+            <i class="fa-solid fa-bars icon-3"></i>
+            <div class="dropdown-mobile-content">
                 <div class="mobile-nav-menu">
                     <div class="mobile-menu-content">
                         <div class="mobile-nav-menu-items">
-                            <p>Dosya Gönder</p>
+                            <p class="text-blue">Dosya Gönder</p>
                         </div>
 
 
@@ -248,7 +248,7 @@
                         <ul class="mobile-nav-menu-lists">
 
                             <li>
-                                <h5>HAKKIMIZDA</h5>
+                                <h5 class="text-blue">HAKKIMIZDA</h5>
                             </li>
                             <li>
                                 <a href="https://wetransfer.com/explore">Şirket
@@ -267,7 +267,7 @@
 
 
                             <li>
-                                <h5>ADVERTISING</h5>
+                                <h5 class="text-blue">ADVERTISING</h5>
                             </li>
                             <li>
                                 <a href="https://wetransfer.com/explore/advertising">Bize Reklam
@@ -284,7 +284,7 @@
 
 
                             <li>
-                                <h5>DAHA FAZLASI</h5>
+                                <h5 class="text-blue">DAHA FAZLASI</h5>
                             </li>
                             <li>
                                 <a
