--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
                     </div>
-                    <div class="dropdown">
+                    <div class="dropdown" id="examples_use">
                         <span>Örnekleri Kullanın</span>
                         <i class="fa-solid fa-chevron-down"></i>
                         <div class="dropdown-content">
@@ -85,10 +85,12 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="dropdown">
+                    <div class="dropdown" id="sources">
                         <span>Kaynaklar</span>
                         <i class="fa-solid fa-chevron-down"></i>
                         <div class="dropdown-content">
+
+
 
                             <div class="source-lists">
                                 <ul>
@@ -150,6 +152,92 @@
 
                         </div>
                     </div>
+
+                    <div class="dropdown" id="more_data">
+                        <span>Daha Fazlası</span>
+                        <i class="fa-solid fa-chevron-down"></i>
+                        <div class="dropdown-content">
+
+
+
+                            <div class="source-lists">
+
+                                <ul>
+                                    <li>
+
+                                        <h5 class="text-blue">ÖRNEKLERİ KULLANIN</h5>
+                                    </li>
+                                    <li>
+                                        <a href="https://wetransfer.com/explore/photographers?sp=false">Fotoğrafçılar
+                                            için
+                                        </a>
+                                    </li>
+                                    <li><a href="https://wetransfer.com/explore/videographers?sp=false">Video grafikler
+                                            için</a>
+                                    </li>
+                                    <li><a href="https://wetransfer.com/explore/designers-illustrators?sp=false">Tasarımcılar
+                                            ve illüstratörler için</a></li>
+                                    <li><a href="https://wetransfer.com/explore/for-students?sp=false">Öğrenciler
+                                            için</a>
+                                    </li>
+
+                                </ul>
+                                <ul>
+                                    <li>
+                                        <h5 class="text-blue">HAKKIMIZDA</h5>
+                                    </li>
+                                    <li>
+                                        <a href="https://wetransfer.com/explore">Şirket
+                                        </a>
+                                    </li>
+                                    <li><a href="https://wetransfer.com/explore/videographers?sp=false">Kariyer</a>
+                                    </li>
+                                    <li><a
+                                            href="https://wetransfer.com/explore/designers-illustrators?sp=false">Kültür</a>
+                                    </li>
+                                    <li><a href="https://wetransfer.com/explore/corporate/leadership">Liderlik</a></li>
+                                    <li><a href="https://wetransfer.com/explore/csr">Şirket Toplumsal
+                                            sorumluluğu</a></li>
+                                    <li><a href="https://wetransfer.com/explore/corporate/awards">Ödüller</a></li>
+                                    <li><a href="https://wetransfer.com/blog/newsroom">Haber Odası</a>
+                                    </li>
+                                </ul>
+                                <ul>
+                                    <li>
+                                        <h5 class="text-blue">ADVERTISING</h5>
+                                    </li>
+                                    <li>
+                                        <a href="https://wetransfer.com/explore/advertising">Bize Reklam
+                                            Verin
+                                        </a>
+                                    </li>
+                                    <li><a href="https://wetransfer.com/explore/advertising/responsible">Sorumlu
+                                            Uygulamalar</a>
+                                    </li>
+                                    <li><a href="https://wetransfer.com/explore/advertising/policies">Reklam
+                                            Poltikaları</a>
+                                    </li>
+                                    <li>
+                                        <h5 class="text-blue">DAHA FAZLASI</h5>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="https://wepresent.wetransfer.com/https://wetransfer.com/explore/photographers?sp=false">We
+                                            present
+                                        </a>
+                                    </li>
+                                    <li><a
+                                            href="https:https://wetransfer.com/blog/wetransfer.com/explore/videographers?sp=false">Blog</a>
+                                    </li>
+                                    <li><a href="https://help.wetransfer.com/hc/en-us">Yardım</a>
+                                    </li>
+
+                                </ul>
+
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
 
 
@@ -184,7 +272,7 @@
                             <p>AnaSayfa</p>
                         </div>
                     </div>
-                    <div class="mobile-menu-content mobile-nav-menu-area" data-index="1" onclick="toggleMenu(1)">
+                    <div class="mobile-menu-content mobile-nav-menu-area" data-index="1" onclick="toggleMenu(1,event)">
                         <div class=" mobile-nav-menu-items">
                             <p>Özellikler</p>
                             <i class="fa-solid fa-chevron-down icon-2"></i>
@@ -216,7 +304,7 @@
                             <p>Fiyatlandırma</p>
                         </div>
                     </div>
-                    <div class="mobile-menu-content mobile-nav-menu-area" data-index="2" onclick="toggleMenu(2)">
+                    <div class="mobile-menu-content mobile-nav-menu-area" data-index="2" onclick="toggleMenu(2,event)">
                         <div class=" mobile-nav-menu-items">
                             <p>Örnekleri Kullanın</p>
                             <i class="fa-solid fa-chevron-down icon-2"></i>
@@ -238,7 +326,7 @@
 
                         </ul>
                     </div>
-                    <div class="mobile-menu-content mobile-nav-menu-area" data-index="3" onclick="toggleMenu(3)">
+                    <div class="mobile-menu-content mobile-nav-menu-area" data-index="3" onclick="toggleMenu(3,event)">
                         <div class=" mobile-nav-menu-items">
                             <p>Kaynaklar</p>
                             <i class="fa-solid fa-chevron-down icon-2"></i>
